# Projects_Python

./: .gitignore.txt
Calculadora/: app.py  pyproject.toml
Flappy_Bird/: game.py
Hub_Games/: game.py  hub.py  pyproject.toml
IA_Langchain(Modelo Teste)/: Historia.txt  Regras.txt  ia_chat.py  pyproject.toml
IA_llama/: Historia.txt  Universo.txt  app.py  capitulos.py  historico_conversa.txt  pyproject.toml  testes.py
Predict-BTC/: PlanilhaBTC.csv  teste.ipynb
Predict_BTC/: IBOV.csv  app.py  app2.py
Predict_BTC/project-ml/: pyproject.toml
QuizPython/: quiz.py
protectgame/: pyproject.toml
